# i2SoftPhone-desktop

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  default.nix  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.gitlab-ci-files/: job-linux-desktop-debian10.yml  job-macosx-desktop.yml  job-windows-desktop.yml
cmake/: TasksMacos.cmake
cmake/toolchains/: toolchain-mac-arm64.cmake
docker-files/: bc-dev-debian9-appimage  bc-dev-debian9-qt-fuse-wget-gpg2
linphone-app/: CMakeLists.txt  resources.qrc
linphone-app/assets/languages/: CMakeLists.txt  cs.ts  da.ts  de.ts  en.ts  es.ts  fr_FR.ts  hu.ts  it.ts  ja.ts  ka.ts  lt.ts  pt.ts  pt_BR.ts  ru.ts  sv.ts  tr.ts  uk.ts  zh_CN.ts
linphone-app/cmake/: FindBCToolbox.cmake  FindBelcard.cmake  FindLibLinphone.cmake  FindMediastreamer2.cmake  FindQtKeychain.cmake
linphone-app/cmake_builder/linphone_package/: CMakeLists.txt  packaging.cmake.in
linphone-app/src/app/: App.cpp  App.hpp  appMain.cpp  main.cpp
linphone-app/src/app/cli/: Cli.cpp  Cli.hpp
linphone-app/src/app/paths/: Paths.cpp
linphone-app/src/app/providers/: ImageProvider.cpp
linphone-app/src/components/: Components.hpp
linphone-app/src/components/call/: CallListener.cpp  CallListener.hpp  CallModel.cpp  CallModel.hpp
linphone-app/src/components/calls/: CallsListModel.cpp
linphone-app/src/components/camera/: Camera.cpp  Camera.hpp
linphone-app/src/components/chat/: ChatModel.cpp
linphone-app/src/components/chat-events/: ChatEvent.hpp  ChatMessageModel.cpp
linphone-app/src/components/chat-room/: ChatRoomModel.cpp  ChatRoomModel.hpp  ChatRoomModelGUI.cpp  ChatRoomModelGUI.hpp  ChatRoomProxyModel.cpp
linphone-app/src/components/conference/: ConferenceListener.cpp  ConferenceListener.hpp  ConferenceModel.cpp  ConferenceModel.hpp
linphone-app/src/components/conferenceInfo/: ConferenceInfoModel.cpp  ConferenceInfoModel.hpp  ConferenceInfoModelGUI.cpp  ConferenceInfoModelGUI.hpp
linphone-app/src/components/contact/: ContactModel.hpp  ContactModelGUI.cpp  ContactModelGUI.hpp  VcardModel.hpp  VcardModelGUI.cpp  VcardModelGUI.hpp
linphone-app/src/components/contacts/: ContactsListProxyModel.cpp  ContactsListProxyModel.hpp
linphone-app/src/components/content/: ContentModel.cpp
linphone-app/src/components/core/: Core.cpp  Core.hpp  CoreHandlers.cpp  CoreHandlers.hpp  CoreListener.cpp  CoreListener.hpp  CoreManager.cpp  CoreManager.hpp  CoreManagerGUI.hpp
linphone-app/src/components/file/: FileDownloader.cpp
linphone-app/src/components/history/: HistoryModel.cpp
linphone-app/src/components/linphoneObject/: LinphoneObject.h  LinphoneThread.hpp
linphone-app/src/components/notifier/: Notifier.cpp  Notifier.hpp
linphone-app/src/components/other/clipboard/: Clipboard.cpp  Clipboard.hpp
linphone-app/src/components/other/date/: LDate.cpp  LDate.hpp  LDateTime.cpp  LDateTime.hpp  LTime.cpp  LTime.hpp
linphone-app/src/components/other/desktop-tools/: DesktopToolsLinux.cpp  DesktopToolsLinux.hpp  DesktopToolsMacOsNative.mm
linphone-app/src/components/other/spell-checker/: SpellChecker.cpp  SpellChecker.hpp  SpellCheckerLinux.cpp  SpellCheckerMacOsNative.mm  SpellCheckerWindowsNative.cpp
linphone-app/src/components/participant/: ParticipantDeviceListModel.cpp  ParticipantDeviceListModel.hpp  ParticipantDeviceListener.cpp  ParticipantDeviceListener.hpp  ParticipantDeviceModel.cpp  ParticipantDeviceModel.hpp  ParticipantListModel.cpp  ParticipantListModel.hpp  ParticipantListModelGUI.cpp  ParticipantListModelGUI.hpp
linphone-app/src/components/settings/: AccountSettingsModel.cpp  AccountSettingsModel.hpp  AccountSettingsModelGUI.cpp  AccountSettingsModelGUI.hpp  SettingsModel.cpp  SettingsModel.hpp  SettingsModelGUI.cpp  SettingsModelGUI.hpp
linphone-app/src/components/sip-addresses/: SipAddressesProxyModel.cpp  SipAddressesProxyModel.hpp  SipAddressesSorter.cpp  SipAddressesSorter.hpp
linphone-app/src/components/telephone-numbers/: TelephoneNumbersModel.cpp
linphone-app/src/components/timeline/: TimelineListModel.cpp  TimelineModel.cpp  TimelineModel.hpp
linphone-app/src/components/vfs/: VfsUtils.hpp
linphone-app/src/gui/core/: CoreManagerGUI.cpp
linphone-app/src/linphone/core/: Core.cpp  Core.hpp  CoreListener.cpp  CoreListener.hpp
linphone-app/src/tester/: utils_tester.cpp  utils_tester.hpp
linphone-app/src/utils/: CodeHelpersGUI.hpp  Constants.hpp  LinphoneEnums.cpp  LinphoneEnums.hpp  QExifImageHeader.cpp  Utils.cpp  Utils.hpp
linphone-app/src/utils/plugins/: PluginDataAPI.cpp  PluginNetworkHelper.cpp  PluginsManager.cpp
linphone-app/tools/: create_appimage.sh
linphone-app/ui/modules/Common/: qmldir
linphone-app/ui/modules/Common/Dialog/: DialogPlus.qml  FileDialog.qml
linphone-app/ui/modules/Common/Form/: ActionButton.qml  DroppableTextArea.qml  RadioButton.qml
linphone-app/ui/modules/Common/Image/: Icon.qml  RoundedImage.qml
linphone-app/ui/modules/Common/Indicators/: MediaProgressBar.qml
linphone-app/ui/modules/Common/Picker/: DatePicker.qml  TimePicker.qml
linphone-app/ui/modules/Common/Popup/: PopupShadow.qml
linphone-app/ui/modules/Common/Tooltip/: Tooltip.qml
linphone-app/ui/modules/Linphone/Camera/: CameraItem.qml  CameraView.qml
linphone-app/ui/modules/Linphone/Chat/: Chat.qml  ChatAudioMessage.qml  ChatContent.qml  FileMessage.qml  Message.qml  OutgoingMessage.qml
linphone-app/ui/modules/Linphone/Contact/: Contact.qml  ContactDescription.qml
linphone-app/ui/modules/Linphone/Menus/: IncallMenu.qml
linphone-app/ui/modules/Linphone/SmartSearchBar/: SmartSearchBar.qml
linphone-app/ui/modules/Linphone/Sticker/: AvatarSticker.qml  CameraSticker.qml  DecorationSticker.qml  Sticker.qml
linphone-app/ui/modules/Linphone/View/: SipAddressesView.qml
linphone-app/ui/scripts/Utils/: utils.js
linphone-app/ui/views/App/Calls/: CallsWindow.qml  Incall.qml  IncallActiveSpeaker.qml  IncallFullscreen.qml  IncallGrid.qml  WaitingRoom.qml
linphone-tester/: CMakeLists.txt  tst_utilstester.cpp
tools/: check_qml_syntax  nix-align.sh
(+118 files in other folders)
